[package]
authors = ["Alex Mohr <mohralexj@gmail.com>"]
edition = "2018"
licence = "GPL-3.0-or-later"
name = "blog_os"
version = "0.1.0"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.8" # for BIOS bootloader.
spin = "0.5.2" 
volatile = "0.2.6" # to mark VGA buffer as volatile. TODO: try upgrading

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"
