[package]
authors = ["Alex Mohr <mohralexj@gmail.com>"]
edition = "2018"
licence = "GPL-3.0-or-later"
name = "blog_os"
version = "0.1.0"

# the profile used for `cargo build`
[profile.dev]
#panic = "abort" # disable stack unwinding on panic. currently disabled for `cargo test` to work

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.8" # for BIOS bootloader.
spin = "0.5.2" 
uart_16550 = "0.2.0" # serial port for qemu
volatile = "0.2.6" # to mark VGA buffer as volatile. TODO: try upgrading
x86_64 = "0.13.2" 

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"

[package.metadata.bootimage]
# arguments to pass to qemu when running tests
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"] 
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # seconds

[[test]]
harness = false
name = "should_panic"

[[test]]
harness = false
name = "stack_overflow"
