[package]
authors = ["Alex Mohr <mohralexj@gmail.com>"]
edition = "2018"
licence = "GPL-3.0-or-later"
name = "blog_os"
version = "0.7.0"

# the profile used for `cargo build`
[profile.dev]
#panic = "abort" # disable stack unwinding on panic. currently disabled for `cargo test` to work

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = {version = "0.9.8", features = ["map_physical_memory"]}# for BIOS bootloader.         
linked_list_allocator = "0.8.0" 
pc-keyboard = "0.5.0" # interprets PS/2 keyboard scancode sets 1 and 2
pic8259_simple = "0.2.0" # keyboard interrupts
spin = "0.5.2" 
uart_16550 = "0.2.0" # serial port for qemu
volatile = "0.2.6" # to mark VGA buffer as volatile. TODO: try upgrading
x86_64 = "0.13.2" 

[dependencies.crossbeam-queue]
default-features = false
features = ["alloc"]
version = "0.2.1"

[dependencies.conquer-once]
default-features = false
version = "0.2.0"

[dependencies.futures-util]
default-features = false
features = ["alloc"]
version = "0.3.4"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"

[package.metadata.bootimage]
# arguments to pass to qemu when running tests
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"] 
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # seconds

[[test]]
harness = false
name = "should_panic"

[[test]]
harness = false
name = "stack_overflow"
